--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,17 @@ services:
       timeout: 5s
       retries: 5
 
+  # pgAdmin
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: password
+    ports:
+      - "5050:80"
+    depends_on:
+      - postgres
+
 volumes:
   pgdata:
   mongodata:
